[gd_scene load_steps=2 format=3 uid="uid://biaaryc3gnufi"]

[ext_resource type="Script" path="res://start_game.gd" id="1_gg00e"]

[node name="StartGame" type="Node2D"]
script = ExtResource("1_gg00e")

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 400.0
offset_top = 276.0
offset_right = 541.0
offset_bottom = 346.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="UpgradeBulletSpeed" type="Button" parent="."]
offset_left = 122.0
offset_top = 251.0
offset_right = 312.0
offset_bottom = 282.0
text = "Bullet speed: "

[node name="UpgradeBulletStr" type="Button" parent="."]
offset_left = 122.0
offset_top = 315.0
offset_right = 312.0
offset_bottom = 346.0
text = "Shield strength: "

[node name="UpgradeShieldStr" type="Button" parent="."]
offset_left = 122.0
offset_top = 373.0
offset_right = 312.0
offset_bottom = 404.0
text = "Shield strength: "

[node name="ResetAllBtn" type="Button" parent="."]
offset_left = 368.0
offset_top = 494.0
offset_right = 558.0
offset_bottom = 525.0
text = "DEBUG reset all"

[node name="HighScoreLabel" type="Label" parent="."]
offset_left = 615.0
offset_top = 192.0
offset_right = 720.0
offset_bottom = 215.0
text = "High scores"

[node name="UpgradesLabel" type="Label" parent="."]
offset_left = 122.0
offset_top = 190.0
offset_right = 227.0
offset_bottom = 213.0
text = "Available upgrades: "

[node name="HighScores" type="CanvasGroup" parent="."]
position = Vector2(615, 152)

[node name="Score0" type="Label" parent="HighScores"]
unique_name_in_owner = true
offset_top = 84.0
offset_right = 40.0
offset_bottom = 107.0
size_flags_horizontal = 0
text = "1: "

[node name="Score1" type="Label" parent="HighScores"]
unique_name_in_owner = true
offset_top = 124.0
offset_right = 40.0
offset_bottom = 147.0
size_flags_horizontal = 0
text = "2:"

[node name="Score2" type="Label" parent="HighScores"]
unique_name_in_owner = true
offset_top = 165.0
offset_right = 40.0
offset_bottom = 188.0
size_flags_horizontal = 0
text = "3:"

[node name="Score3" type="Label" parent="HighScores"]
unique_name_in_owner = true
offset_top = 206.0
offset_right = 40.0
offset_bottom = 229.0
size_flags_horizontal = 0
text = "4:"

[node name="Score4" type="Label" parent="HighScores"]
unique_name_in_owner = true
offset_top = 242.0
offset_right = 40.0
offset_bottom = 265.0
size_flags_horizontal = 0
text = "5:"

[connection signal="button_up" from="StartButton" to="." method="_on_start_button_button_up"]
[connection signal="button_up" from="UpgradeBulletSpeed" to="." method="_on_upgrade_bullet_speed_button_up"]
[connection signal="button_up" from="UpgradeBulletStr" to="." method="_on_upgrade_bullet_str_button_up"]
[connection signal="button_up" from="UpgradeShieldStr" to="." method="_on_upgrade_shield_str_button_up"]
[connection signal="button_up" from="ResetAllBtn" to="." method="_on_reset_all_btn_button_up"]
